infra/k8s/permits-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: permits-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: permits
  template:
    metadata:
      labels:
        app: permits
    spec:
      containers:
        - name: permits
          image: amaalhov/permits
---
apiVersion: v1
kind: Service
metadata:
  name: permits-srv
spec:
  selector:
    app: permits
  ports:
    - name: permits
      protocol: TCP
      port: 3000
      targetPort: 3000
